switch body font to Century Expanded, fix drop cap alignment, override KaTeX fonts

--- a/css/katex-fixes.css
+++ b/css/katex-fixes.css
@@ -4,6 +4,15 @@
 .katex {
   line-height: 1 !important;
   font-size: 1em !important;
+  font-family: "Century Expanded", "KaTeX_Main", serif !important;
+}
+
+.katex .mathnormal {
+  font-family: "Century Expanded", "KaTeX_Math", serif !important;
+}
+
+.katex .mathit {
+  font-family: "Century Expanded", "KaTeX_Main", serif !important;
 }
 
 .katex-display {
