--- a/css/post-styles.css
+++ b/css/post-styles.css
@@ -105,9 +105,9 @@
   font-weight: normal;
   float: left;
   font-size: 4.2em;
-  line-height: 0.75;
+  line-height: 0.68;
   padding-right: 10px;
-  padding-top: 6px;
+  padding-top: 10px;
   color: var(--manuscript-blue);
 }
 
